Customize base blog details.

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://framework-one.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: FW/1 - The Invisible Framework
+subtitle: Framework One and friends...
+author: Sean Corfield
 simple_search: https://www.google.com/search
 description:
 
@@ -63,7 +63,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: framework-one
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
@@ -90,8 +90,8 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
-disqus_show_comment_count: false
+disqus_short_name: framework-one
+disqus_show_comment_count: true
 
 # Google Analytics
 google_analytics_tracking_id:
